--- a/custom_cnn.ipynb
+++ b/custom_cnn.ipynb
@@ -1004,6 +1004,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from imblearn.over_sampling import SMOTE\n",
+    "sm = SMOTE()\n",
+    "\n",
     "train_rows=len(X_train)\n",
     "X_train = X_train.reshape(train_rows,-1)\n",
     "\n",
